--- a/src/less/layout.less
+++ b/src/less/layout.less
@@ -37,7 +37,6 @@ main {
         text-align: right;
         padding-right: 0.5em;
         &> span {
-          width: 6px;
           height: 10px;
           display: inline-block;
           margin-left: 3px;
@@ -48,8 +47,20 @@ main {
             content: "50";
             width: 20px;
           }
+          &.bond5 {
+            width: 10px;
+          }
           &.bond1 {
             background: #00ffc0;
+            width: 6px;
+          }
+          &.bond500 {
+            background: #936ecb;
+            width: 4px;
+          }
+          &.bond100 {
+            background: #cb5a5a;
+            width: 2px;
           }
         }
       }
